--- a/table.html
+++ b/table.html
@@ -2,6 +2,17 @@
 <html lang="en">
     <head>
         <title>Table!</title>
+        <style>
+            table {
+                border: 1px solid black;
+                border-collapse: collapse;
+            }
+
+            td, th {
+                border: 1px solid black;
+                padding: auto;
+            }
+        </style>
     </head>
     <body>
         <table>
